--- a/homework/cv/data.ipynb
+++ b/homework/cv/data.ipynb
@@ -36,7 +36,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write code to get total number of images"
+    "# Write code to get total number of images\n",
+    "\n",
+    "print(len(ds))"
    ]
   }
  ],
